--- a/lib/cai_web/components/layouts/app.html.heex
+++ b/lib/cai_web/components/layouts/app.html.heex
@@ -2,24 +2,21 @@
   <div class="flex items-center justify-between border-b border-zinc-100 py-3 text-sm">
     <div class="flex items-center gap-4">
       <a href="/">
-        <img src={~p"/images/logo.svg"} width="36" />
+        <img src={~p"/images/logo.png"} width="36" />
       </a>
       <p class="bg-brand/5 text-brand rounded-full px-2 font-medium leading-6">
-        v<%= Application.spec(:phoenix, :vsn) %>
+        v<%= Application.spec(:cai, :vsn) %>
       </p>
     </div>
     <div class="flex items-center gap-4 font-semibold leading-6 text-zinc-900">
-      <a href="https://twitter.com/elixirphoenix" class="hover:text-zinc-700">
-        @elixirphoenix
+      <a href="/characters" class="rounded-lg bg-zinc-100 px-2 py-1 hover:bg-zinc-200/80">
+        Characters <span aria-hidden="true">&rarr;</span>
       </a>
-      <a href="https://github.com/phoenixframework/phoenix" class="hover:text-zinc-700">
-        GitHub
+      <a href="/sessions" class="rounded-lg bg-zinc-100 px-2 py-1 hover:bg-zinc-200/80">
+        Sessions <span aria-hidden="true">&rarr;</span>
       </a>
-      <a
-        href="https://hexdocs.pm/phoenix/overview.html"
-        class="rounded-lg bg-zinc-100 px-2 py-1 hover:bg-zinc-200/80"
-      >
-        Get Started <span aria-hidden="true">&rarr;</span>
+      <a href="/world" class="rounded-lg bg-zinc-100 px-2 py-1 hover:bg-zinc-200/80">
+        World Tracker <span aria-hidden="true">&rarr;</span>
       </a>
     </div>
   </div>
