--- a/lib/cai_web/live/session_live/show.html.heex
+++ b/lib/cai_web/live/session_live/show.html.heex
@@ -13,7 +13,7 @@
 </.header>
 
 <div :if={@streams}>
-  <h3 class="m-2">Event Log</h3>
+  <h3 class="m-2">Live Event Feed</h3>
   <div
     id="ess-events"
     phx-update="stream"
