log items are spans instead of li's now, add animation when event fades in, minor class and wording tweaks

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -3,3 +3,18 @@
 @import "tailwindcss/utilities";
 
 /* This file is for your main application CSS */
+
+@keyframes fade {
+  from {
+    background-color: purple;
+  }
+
+  75%, 100% {
+    background-color: transparent;
+    padding: 0%;
+  }
+}
+
+.animate-fade {
+  animation: fade 1s linear infinite;
+}
