format timestamp phx hook, timestamp and character_header components, live navigation working between List and Show, format_duration util

--- a/lib/cai_web/live/session_live/list.html.heex
+++ b/lib/cai_web/live/session_live/list.html.heex
@@ -1,11 +1,4 @@
-<.header :if={@character}>
-  <img class="h-20 w-20" src={CAI.factions()[@character.faction_id].image} />
-
-  <span :if={@character.outfit}>[<%= @character.outfit.alias %>]</span>
-  <%= @character.name_first %>
-
-  <:subtitle><%= @character.character_id %></:subtitle>
-</.header>
+<.character_header :if={@character} character={@character}/>
 
 <div :if={assigns[:streams][:sessions]}>
   <h3 class="m-2">
@@ -13,8 +6,16 @@
   </h3>
   <div id="session-list" phx-update="stream">
     <div :for={{dom_id, {login, logout}} <- @streams.sessions} id={dom_id}>
-      <.button class="border-solid border-2 m-1 rounded-2xl border-gray-400">
-        Login: <%= login %>, Logout: <%= logout %>
+      <.button 
+        class="border-solid border-2 m-1 rounded-2xl border-gray-400" 
+        phx-click={JS.navigate(~p"/sessions/#{@character.character_id}/show?login=#{login}&logout=#{logout}")}
+      >
+        Duration: <span><%= format_duration(login, logout) %></span>
+        <br>
+        Began at 
+        <.timestamp id={"#{dom_id}-login"} unix_timestamp={login}/> 
+        | ended at 
+        <.timestamp id={"#{dom_id}-logout"} unix_timestamp={logout}/>
       </.button>
     </div>
   </div>
