--- a/lib/cai_web/live/session_live/show.html.heex
+++ b/lib/cai_web/live/session_live/show.html.heex
@@ -1,11 +1,4 @@
-<.header :if={@character}>
-  <img class="h-20 w-20" src={CAI.factions()[@character.faction_id].image} />
-
-  <span :if={@character.outfit}>[<%= @character.outfit.alias %>]</span>
-  <%= @character.name_first %>
-
-  <:subtitle><%= @character.character_id %></:subtitle>
-</.header>
+<.character_header :if={@character} character={@character}/>
 
 <div :if={assigns[:streams][:events]}>
   <h3 class="m-2">
@@ -27,6 +20,7 @@
       </.button>
     </span>
   </div>
+
+  <.back navigate={~p"/sessions/#{@character.character_id}"}>Back to sessions</.back>
 </div>
 
-<.back navigate={~p"/sessions"}>Back to sessions</.back>
