--- a/lib/cai_web/live/session_live/show.html.heex
+++ b/lib/cai_web/live/session_live/show.html.heex
@@ -1,4 +1,4 @@
-<.character_header :if={@character} character={@character}/>
+<.character_header :if={assigns[:character]} character={@character}/>
 
 <div :if={assigns[:streams][:events]}>
   <h3 class="m-2">
