HoverFormatTimestamp hook for event feed logs, hover_timestamp function component, refactor CAI xp filters, add is_character_id and is_npc_id guards to CAI (and accompanying bool functions), add NSO logo, exclude character (weapon) stats for now, make sure to terminate PS2.Socket process before trying to restart it when heartbeat times out, link_character improvements in ESSComponents, refactor Load More button functionality to fetch character async via Task, Load More button disables and displays Loading...

--- a/lib/cai_web/live/session_live/show.html.heex
+++ b/lib/cai_web/live/session_live/show.html.heex
@@ -22,13 +22,24 @@
       :if={is_list(assigns[:remaining_events]) and not match?([], assigns[:remaining_events])}
       class="flex justify-center"
     >
-      <.button
-        id="load-more-button"
-        phx-click="load-more-events"
-        class="absolute mx-auto border-solid border-2 border-gray-400"
-      >
-        Load More
-      </.button>
+      <%= if @loading_more? do %>
+        <.button
+          id="load-more-button"
+          phx-click="load-more-events"
+          class="absolute mx-auto border-solid border-2 border-gray-400 hover:bg-zinc-900 text-gray-400 active:text-gray-400"
+          disabled
+        >
+          Loading...
+        </.button>
+      <% else %>
+        <.button
+          id="load-more-button"
+          phx-click="load-more-events"
+          class="absolute mx-auto border-solid border-2 border-gray-400"
+        >
+          Load More
+        </.button>
+      <% end %>
     </span>
   </div>
 
