--- a/lib/cai_web/live/session_live/show.html.heex
+++ b/lib/cai_web/live/session_live/show.html.heex
@@ -7,13 +7,9 @@
   <div class="border-solid border-4 m-1 p-2 rounded-2xl border-gray-400">
     <span id="live-event-feed" phx-update="stream">
       <.event_item
-        :for={{dom_id, {event, character, other, count, metadata}} <- @streams.events}
-        event={event}
-        character={character}
-        other={other}
+        :for={{dom_id, entry} <- @streams.events}
+        entry={entry}
         id={dom_id}
-        count={count}
-        metadata={metadata}
       />
       <%!-- <span :if={need a way to show this if the stream is empty} class="italic">
         In-game events will be displayed here as they occur
