--- a/lib/cai_web/live/session_live/show.html.heex
+++ b/lib/cai_web/live/session_live/show.html.heex
@@ -1,16 +1,20 @@
 <.character_header character={assigns[:character]} />
 
+<div :if={not @live?}>
+  <% {login, logout} = @timestamps %>
+  <h3 class="m-2">
+    Session from <.timestamp id="session-login" unix_timestamp={login} /> to
+    <.timestamp id="session-logout" unix_timestamp={logout} />
+  </h3>
+</div>
+
 <div :if={assigns[:streams][:events]}>
   <h3 class="m-2">
     <span :if={@live?}><span class="animate-slow-blink">🔴</span> Live</span> Event Feed
   </h3>
   <div class="border-solid border-4 m-1 p-2 rounded-2xl border-gray-400">
     <span id="live-event-feed" phx-update="stream">
-      <.event_item
-        :for={{dom_id, entry} <- @streams.events}
-        entry={entry}
-        id={dom_id}
-      />
+      <.event_item :for={{dom_id, entry} <- @streams.events} entry={entry} id={dom_id} />
       <%!-- <span :if={need a way to show this if the stream is empty} class="italic">
         In-game events will be displayed here as they occur
       </span> --%>
