home page About update

--- a/lib/cai_web/controllers/page_html/home.html.heex
+++ b/lib/cai_web/controllers/page_html/home.html.heex
@@ -19,7 +19,8 @@
 <div>
   <sub class="flex justify-center text-lg m-6 pb-1 border-b border-gray-400">About</sub>
   <p>
-    Consolidation of Auraxian Information (CAI) uses
+    Consolidation of Auraxian Information (CAI) currently offers a live and historical session tracker.
+    CAI uses
     <a class="hover:text-gray-400 underline" href="https://census.daybreakgames.com/">Daybreak Games' Census API</a>
     and
     <a class="hover:text-gray-400 underline" href="https://census.daybreakgames.com/#what-is-websocket">
@@ -27,12 +28,13 @@
     </a>
     in-game information. The website is built with the
     <a class="hover:text-gray-400 underline" href="https://elixir-lang.org/">Elixir</a>
-    programming language and <a
-      class="hover:text-gray-400 underline"
-      href="https://github.com/phoenixframework/phoenix_live_view"
-    >Phoenix LiveView</a>.
+    programming language and 
+    <a class="hover:text-gray-400 underline" href="https://github.com/phoenixframework/phoenix_live_view">
+      Phoenix LiveView
+    </a>.
   </p>
   <p class="pt-2">
-    This website is open source on GitHub [LINK TBD]
+    This website is open source on GitHub [LINK TBD].
+    Please create an issue on the repo if you find bugs or have a feature request!
   </p>
 </div>
