--- a/lib/cai_web/components/layouts/app.html.heex
+++ b/lib/cai_web/components/layouts/app.html.heex
@@ -21,3 +21,11 @@
     <%= @inner_content %>
   </div>
 </main>
+<footer class="fixed inset-x-0 bottom-0 text-center border-t border-zinc-100 bg-black/80">
+  <p class="text-sm p-2">
+    Find a bug? Want to request a new feature? Please create an issue on CAI's 
+    <a class="hover:text-gray-400 underline" href="https://github.com/Bentheburrito/cai">
+      GitHub repository
+    </a>
+  </p>
+</footer>
