fix outdated vehicle_destroys pkey info in ecto schema, misc page improvements and cleanup

--- a/lib/cai_web/components/layouts/app.html.heex
+++ b/lib/cai_web/components/layouts/app.html.heex
@@ -8,6 +8,7 @@
         v<%= Application.spec(:cai, :vsn) %>
       </p>
     </div>
+    <a href="/"><b>Consolidation of Auraxian Information</b></a>
     <div class="flex items-center gap-4 font-semibold leading-6 text-zinc-900">
       <a href="/sessions" class="rounded-lg bg-zinc-100 px-2 py-1 hover:bg-zinc-200/80">
         Sessions
@@ -23,9 +24,9 @@
 </main>
 <footer class="fixed inset-x-0 bottom-0 text-center border-t border-zinc-100 bg-black/80">
   <p class="text-sm p-2">
-    Find a bug? Want to request a new feature? Please create an issue on CAI's 
-    <a class="hover:text-gray-400 underline" href="https://github.com/Bentheburrito/cai">
-      GitHub repository
+    Find a bug? Want to request a new feature? Please create an issue on 
+    <a class="hover:text-gray-400 underline" href="https://github.com/Bentheburrito/cai/issues">
+      GitHub!
     </a>
   </p>
 </footer>
