--- a/lib/cai_web/controllers/page_html/home.html.heex
+++ b/lib/cai_web/controllers/page_html/home.html.heex
@@ -13,28 +13,29 @@
   </div>
 </div>
 <div class="flex justify-around gap-4 font-semibold leading-6 text-zinc-200">
-  More to come soon™
+  More coming soon™
 </div>
 
 <div>
   <sub class="flex justify-center text-lg m-6 pb-1 border-b border-gray-400">About</sub>
   <p>
-    Consolidation of Auraxian Information (CAI) currently offers a live and historical session tracker.
-    CAI uses
+    Consolidation of Auraxian Information (CAI) currently offers a rich character session tracker, as well as session 
+    history (up to a certain point in time). CAI uses
     <a class="hover:text-gray-400 underline" href="https://census.daybreakgames.com/">Daybreak Games' Census API</a>
     and
     <a class="hover:text-gray-400 underline" href="https://census.daybreakgames.com/#what-is-websocket">
       Event Streaming Service to collect
     </a>
-    in-game information. The website is built with the
+    in-game information. The website is built with the excellent
     <a class="hover:text-gray-400 underline" href="https://elixir-lang.org/">Elixir</a>
-    programming language and 
-    <a class="hover:text-gray-400 underline" href="https://github.com/phoenixframework/phoenix_live_view">
-      Phoenix LiveView
-    </a>.
+    programming language and <a
+      class="hover:text-gray-400 underline"
+      href="https://github.com/phoenixframework/phoenix_live_view"
+    >
+      Phoenix LiveView.</a> I originally built the session
   </p>
   <p class="pt-2">
-    This website is open source on GitHub [LINK TBD].
+    This website is open source on <a class="hover:text-gray-400 underline" href="https://github.com/Bentheburrito/cai">GitHub</a>.
     Please create an issue on the repo if you find bugs or have a feature request!
   </p>
 </div>
