--- a/lib/cai_web/live/session_live/list.html.heex
+++ b/lib/cai_web/live/session_live/list.html.heex
@@ -1,3 +1,5 @@
+<.back navigate={~p"/sessions"} parent_class="mb-2">Back to search</.back>
+
 <.character_header character={assigns[:character]} />
 
 <div :if={assigns[:streams][:sessions]}>
