--- a/lib/cai_web/controllers/page_html/home.html.heex
+++ b/lib/cai_web/controllers/page_html/home.html.heex
@@ -32,7 +32,7 @@
       class="hover:text-gray-400 underline"
       href="https://github.com/phoenixframework/phoenix_live_view"
     >
-      Phoenix LiveView.</a> I originally built the session
+      Phoenix LiveView.</a>
   </p>
   <p class="pt-2">
     This website is open source on <a class="hover:text-gray-400 underline" href="https://github.com/Bentheburrito/cai">GitHub</a>.
