--- a/lib/cai_web/controllers/page_html/home.html.heex
+++ b/lib/cai_web/controllers/page_html/home.html.heex
@@ -19,7 +19,7 @@
 <div>
   <sub class="flex justify-center text-lg m-6 pb-1 border-b border-gray-400">About</sub>
   <p>
-    Consolidation of Auraxian Information (CAI) currently offers a rich character session tracker, as well as session 
+    Consolidation of Auraxian Information (CAI) currently offers a rich character session tracker, as well as session
     history (up to a certain point in time). CAI uses
     <a class="hover:text-gray-400 underline" href="https://census.daybreakgames.com/">Daybreak Games' Census API</a>
     and
@@ -28,11 +28,10 @@
     </a>
     in-game information. The website is built with the excellent
     <a class="hover:text-gray-400 underline" href="https://elixir-lang.org/">Elixir</a>
-    programming language and <a
-      class="hover:text-gray-400 underline"
-      href="https://github.com/phoenixframework/phoenix_live_view"
-    >
-      Phoenix LiveView.</a>
+    programming language and
+    <a class="hover:text-gray-400 underline" href="https://github.com/phoenixframework/phoenix_live_view">
+      Phoenix LiveView.
+    </a>
   </p>
   <p class="pt-2">
     This website is open source on <a class="hover:text-gray-400 underline" href="https://github.com/Bentheburrito/cai">GitHub</a>.
