impl loadout and vehicle icons in event feed, CAI.loadouts/0, vehicle cost map includes (hardcoded) vehicle icon info, Outfit.alias_or_name/1, ESSComponents.link_character now takes opts, ESSComponents new fns (loadout_icon/1 and vehicle_icon/2), session duration and start/end times now render on live sessions

--- a/lib/cai_web/live/session_live/show.html.heex
+++ b/lib/cai_web/live/session_live/show.html.heex
@@ -6,11 +6,13 @@
   </div>
 
   <% {login, logout} = @timestamps %>
-  <div :if={not @live?} class="flex-col">
+  <div class="flex-col">
     <h3 class="m-2">
+      <% logout = if @live? and assigns[:last_entry], do: @last_entry.event.timestamp, else: logout %>
       Session from <.timestamp id="session-login" unix_timestamp={login} class="font-bold" /> to
       <.timestamp id="session-logout" unix_timestamp={logout} class="font-bold" />
       <br /> Lasted <span class="font-bold"><%= format_duration(login, logout) %></span>
+      <%= if @live?, do: "so far (times update every event)" %>
     </h3>
   </div>
 </div>
