render Chimera icon locally (broken in census), clean up aggregate stats table

--- a/lib/cai_web/live/session_live/show.html.heex
+++ b/lib/cai_web/live/session_live/show.html.heex
@@ -6,9 +6,9 @@
   </div>
 
   <% {login, logout} = @timestamps %>
+  <% logout = if @live? and assigns[:last_entry], do: @last_entry.event.timestamp, else: logout %>
   <div class="flex-col">
     <h3 class="m-2">
-      <% logout = if @live? and assigns[:last_entry], do: @last_entry.event.timestamp, else: logout %>
       Session from <.timestamp id="session-login" unix_timestamp={login} class="font-bold" /> to
       <.timestamp id="session-logout" unix_timestamp={logout} class="font-bold" />
       <br /> Lasted <span class="font-bold"><%= format_duration(login, logout) %></span>
@@ -26,26 +26,21 @@
       <th class="p-1 pl-2 border-solid border-b border-r border-gray-200" title="Infantry-related stats">Infantry</th>
       <th class="p-1 pl-2 border-solid border-b border-gray-200">Total</th>
       <th class="p-1 pl-2 border-solid border-b border-gray-200" title="Infantry vs. Infantry">IvI</th>
-      <th class="p-1 pl-2 border-solid border-b border-gray-200">Headshots</th>
-      <th
-        class="p-1 pl-2 border-solid border-b border-gray-200"
-        title="Kills that are both headshots and Infantry vs. Infantry"
-      >
-        IvI Headshots
-      </th>
       <tr>
         <td class="p-1 pl-2 border-r">Kills</td>
         <td class="p-1 pl-2"><%= @aggregates.kill_count %></td>
         <td class="p-1 pl-2"><%= @aggregates.kill_ivi_count %></td>
-        <td class="p-1 pl-2"><%= @aggregates.kill_hs_count %></td>
+        
+      </tr>
+      <tr>
+              <td class="p-1 pl-2 border-r">Headshots</td>
+      <td class="p-1 pl-2"><%= @aggregates.kill_hs_count %></td>
         <td class="p-1 pl-2"><%= @aggregates.kill_hs_ivi_count %></td>
       </tr>
       <tr>
         <td class="p-1 pl-2 border-r">Deaths</td>
         <td class="p-1 pl-2"><%= @aggregates.death_count %></td>
         <td class="p-1 pl-2"><%= @aggregates.death_ivi_count %></td>
-        <td class="p-1 pl-2">-</td>
-        <td class="p-1 pl-2">-</td>
       </tr>
       <tr>
         <td class="p-1 pl-2 border-r" title="Kill/Death Ratio">KDR</td>
@@ -61,30 +56,15 @@
         >
           <%= Float.round(safe_divide(@aggregates.kill_ivi_count, @aggregates.death_ivi_count), 2) %>
         </td>
-        <td class="p-1 pl-2">-</td>
-        <td class="p-1 pl-2">-</td>
       </tr>
+      <% duration_mins = Float.round((logout - login) / 60, 2) %>
       <tr>
-        <% logout = if @live? and assigns[:last_entry], do: @last_entry.event.timestamp, else: logout %>
-        <% duration_mins = Float.round((logout - login) / 60, 2) %>
         <td class="p-1 pl-2 border-r" title="Kills/Minute">KPM</td>
         <td class="p-1 pl-2" title={"# total kills / minutes played => #{@aggregates.kill_count} / #{duration_mins}"}>
           <%= Float.round(safe_divide(@aggregates.kill_count, duration_mins), 2) %>
         </td>
         <td class="p-1 pl-2" title={"# IvI kills / minutes played => #{@aggregates.kill_ivi_count} / #{duration_mins}"}>
           <%= Float.round(safe_divide(@aggregates.kill_ivi_count, duration_mins), 2) %>
-        </td>
-        <td
-          class="p-1 pl-2"
-          title={"# headshot kills / minutes played => #{@aggregates.kill_hs_count} / #{duration_mins}"}
-        >
-          <%= Float.round(safe_divide(@aggregates.kill_hs_count, duration_mins), 2) %>
-        </td>
-        <td
-          class="p-1 pl-2"
-          title={"# IvI headshot kills / minutes played => #{@aggregates.kill_hs_ivi_count} / #{duration_mins}"}
-        >
-          <%= Float.round(safe_divide(@aggregates.kill_hs_ivi_count, duration_mins), 2) %>
         </td>
       </tr>
       <tr>
@@ -101,8 +81,6 @@
         >
           <%= Float.round(safe_divide(@aggregates.kill_hs_ivi_count, @aggregates.kill_ivi_count) * 100, 2) %>%
         </td>
-        <td class="p-1 pl-2">-</td>
-        <td class="p-1 pl-2">-</td>
       </tr>
       <th class="p-1 pl-2 border-solid border-b border-r border-gray-200" title="Vehicle-related stats">Vehicle</th>
       <th class="p-1 pl-2 border-solid border-b border-gray-200" title="Total # of Vehicles">Total</th>
@@ -132,11 +110,20 @@
           <%= Float.round(safe_divide(@aggregates.nanites_destroyed, @aggregates.nanites_lost), 2) %>
         </td>
       </tr>
+       <tr>
+        <td class="p-1 pl-2 border-r" title="Vehicle Kills/Minute">KPM</td>
+        <td class="p-1 pl-2" title={"# total vehicle kills / minutes played => #{@aggregates.vehicle_kill_count} / #{duration_mins}"}>
+          <%= Float.round(safe_divide(@aggregates.vehicle_kill_count, duration_mins), 2) %>
+        </td>
+        <td class="p-1 pl-2" title={"# nanites destroyed / minutes played => #{@aggregates.nanites_destroyed} / #{duration_mins}"}>
+          <%= Float.round(safe_divide(@aggregates.nanites_destroyed, duration_mins), 2) %>
+        </td>
+      </tr>
     </table>
     <div class="flex-col ml-4">
       XP Earned: <%= @aggregates.xp_earned %> <br /> Revive Count: <%= @aggregates.revive_count %> <br />
       <br />
-      Pro tip: you can hover over some headers to see a more descriptive title, or hover over certain cells to see how they're calculated
+      Note: you can hover over some headers to see a more descriptive title, or hover over certain cells to see how they're calculated
     </div>
   </div>
 </div>
